force-app/main/default/objects/Parent_Mentorship_Program__c/Parent_Mentorship_Program__c.object-meta.xml
<CustomObject>
    <label>Parent Mentorship Program</label>
    <nameField>
        <displayFormat>Program ID - {0000}</displayFormat>
        <label>Program No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parent Mentorship Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>