force-app/main/default/objects/Parent_Mentorship_Program__c/fields/Mentee__c.field-meta.xml
<CustomField>
    <fullName>Mentee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mentee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Parent_Mentorship_Programs1</relationshipName>
    <type>Lookup</type>
</CustomField>