force-app/main/default/objects/Parent_Mentorship_Program__c/fields/Mentor__c.field-meta.xml
<CustomField>
    <fullName>Mentor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mentor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Parent_Mentorship_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>