force-app/main/default/objects/Parent_Mentorship_Program__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Parent Mentorship Programs</relationshipLabel>
    <relationshipName>Parent_Mentorship_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>