force-app/main/default/objects/Parent_Mentorship_Program__c/listViews/Mentorship_Program_Queue_Parent_Mentorship_Program.listView-meta.xml
<ListView>
    <fullName>Mentorship_Program_Queue_Parent_Mentorship_Program</fullName>
    <filterScope>Queue</filterScope>
    <label>Mentorship Program Queue</label>
    <queue>Mentorship_Program_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>